--- a/netty/内存管理.md
+++ b/netty/内存管理.md
@@ -60,6 +60,10 @@ poolthreadcache是线程私有，poolarena是线程共享的
 接下来再分配一个8k内存，根据算法计算出树深为11，从左往右找，2048已满，找到2049，设置其状态为已满，修改父节点1024的状态从部分可用-》已满，向上类推父节点状态。
 ![[netty_mem_8k_2.jpg]]
 #### 分配subpage级别
-//todo
+- 分配20b，扩到32b
+- 优先从poolthreadcache中分配，如果分配失败，走poolarena分配流程
+- 从poolarena的tinypoolsubpage数组中找到32b位置的链表，如果有可用的page，则直接分配
+- 按照q050 q025 q000 qinit q075的顺序找可用的chunk，因为32b小于8k，所以从数深11层开始找page，找到则分配
+- 找不到则创建一个page，按照32b划分，将创建的page关联到满二叉树上，并且关联到tinypoolsubpage数组的链表上
 ### 内存回收
 每8192次使用poolthreadcache进行一次内存分配，就会进行一次整理，当内部维护的六种memory region cache各自分配的内存的次数小于size，则进行free。此外当线程销毁时，netty重写了pool thread cache的finalize()方法，其中也进行了free。
