--- a/netty/内存管理.md
+++ b/netty/内存管理.md
@@ -24,12 +24,13 @@
 - q050 内存使用率为50 - 100%
 - q075 内存使用率为75 - 100%
 - q100 内存使用率为100%
-当某个chunlist中的chunk使用率不再该范围中，就移除到其他范围。
-<font color="red">注意：</font>
-1. 每个poolchunklist使用率之间有交错，是防止出现某个chunk在其中两个chunklist的使用率中频繁切换，导致需要频繁移动到其他chunklist中。
-2. qinit的意义
-	1. q000不存在prev指针指向qinit，也就是说当一个chunk内存使用率大于25，就会被移动到q000，而当这个chunk内存使用率小于1时，不会移动到qinit，因为q000的prev为null，所以这个chunk会被回收。
-	2. qinit的chunk如果内存使用率小于0，也不会回收，而是可以继续被使用，这样就避免重复创建
+当某个chunlist中的chunk使用率不在该范围中，就移动到其他范围。
+![[netty_q.jpg]]
+
+<font color="red">注意1：</font> 每个poolchunklist使用率之间有交错，是防止出现某个chunk在其中两个chunklist的使用率中频繁切换，导致需要频繁移动到其他chunklist中。
+<font color="red">注意2：</font> 为什么要存在qinit，而不是直接从q000开始？
+1. q000不存在prev指针指向qinit，也就是说当一个chunk内存使用率大于25，就会被移动到q000，而当这个chunk内存使用率小于1时，不会移动到qinit，因为q000的prev为null，所以这个chunk会被回收。
+2. qinit的chunk如果内存使用率小于0，也不会回收，而是可以继续被使用，这样就避免重复创建
 #### poolchunk
 netty使用伙伴算法将16m分成2048个page，每个page是8k，使用一颗满二叉树表示其内存结构。
 该满二叉树的特性为，每个父节点都存在两个子节点，所以一个父节点可以表示两倍子节点的内存块，即第1024节点可表示第2048和第2049节点的内存和是16k。当子节点被使用，同时也会修改父节点的状态为使用中。
